# trdelnik

crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: commander.rs
crates/trdelnik/src/: commander.rs
examples/sealevel-attacks/: Anchor.toml  Cargo.toml
examples/sealevel-attacks/program_client/: Cargo.toml
examples/sealevel-attacks/program_client/src/: lib.rs
examples/sealevel-attacks/programs/0-signer-authorization/insecure/: Cargo.toml
examples/sealevel-attacks/programs/0-signer-authorization/insecure/src/: lib.rs
examples/sealevel-attacks/programs/0-signer-authorization/insecure/tests/: test.rs
examples/sealevel-attacks/programs/0-signer-authorization/secure/: Cargo.toml
examples/sealevel-attacks/programs/0-signer-authorization/secure/src/: lib.rs
examples/sealevel-attacks/programs/0-signer-authorization/secure/tests/: test.rs
examples/sealevel-attacks/programs/1-account-data-matching/insecure/: Cargo.toml
examples/sealevel-attacks/programs/1-account-data-matching/insecure/src/: lib.rs
examples/sealevel-attacks/programs/1-account-data-matching/insecure/tests/: test.rs
examples/sealevel-attacks/programs/1-account-data-matching/secure/: Cargo.toml
examples/sealevel-attacks/programs/1-account-data-matching/secure/src/: lib.rs
examples/sealevel-attacks/programs/1-account-data-matching/secure/tests/: test.rs
examples/sealevel-attacks/programs/2-owner-checks/insecure/: Cargo.toml
examples/sealevel-attacks/programs/2-owner-checks/insecure/src/: lib.rs
examples/sealevel-attacks/programs/2-owner-checks/secure/: Cargo.toml
examples/sealevel-attacks/programs/3-type-cosplay/insecure/: Cargo.toml
examples/sealevel-attacks/programs/3-type-cosplay/secure/: Cargo.toml
examples/state_machine/: README.md  jupyter_test.ipynb
(+7 files in other folders)
